<resources>
    <string name="app_name">AuthwithFirebase</string>
    <string name="registration">Registration</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
</resources>